# camera_ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: arcface.cpp  arcface.h  arcface_jni.cpp  base.cpp  base.h  mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
android/src/main/kotlin/uz/datalab/camera_ai/: Camera.java  CameraAiPlugin.kt  CameraPermissions.java  CameraUtils.java  DartMessenger.java  MethodCallHandlerImpl.java
android/src/main/kotlin/uz/datalab/camera_ai/vision/: BarcodeScannerProcessor.java  FaceDetection.java  VisionUtil.java
android/src/main/kotlin/uz/datalab/face/: Detect.java  Face.java  FaceUtil.java  Recognition.java
android/src/main/kotlin/uz/datalab/vision/: Vision.java  VisionUtil.java
example/: .gitignore  README.md  pubspec.yaml
example/ios/: .gitignore  Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: .gitignore  camera_ai.podspec
ios/Classes/: CameraAiPlugin.h  CameraAiPlugin.m  Face.swift  MyFaceDetector.swift  OpenCvWrapper.h  OpenCvWrapper.mm  SwiftCameraAiPlugin.swift
ios/Classes/FaceDetection/: MyFace.swift  MyFaceDetector.swift
lib/: camera_ai.dart  camera_image.dart
lib/new/src/common/: camera_channel.dart
test/: camera_ai_test.dart
test/support_android/: support_android_test.dart
